# LedgerCopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.pt-BR.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  terraform.yml
apps/: __init__.py
apps/api/: auth.py  config.py  database.py  main.py  redis_pool.py  seed.py  temporal_client.py
apps/api/models/: __init__.py  audit.py  base.py  case.py  cost_center.py  dead_letter.py  document.py  extraction.py  human_review.py  model_run.py  organization.py  payment.py  policy_decision.py  prompt_version.py  purchase_order.py  reconciliation_result.py  supplier.py  user.py  validation.py
apps/api/routers/: auth.py  cases.py  dashboard.py  documents.py  intake.py  metrics_endpoint.py  monitoring.py  prompts.py  reviews.py
apps/api/schemas/: __init__.py  cases.py
apps/api/services/: ingestion.py  prompts.py  reference.py  tracing.py
apps/api/tests/: test_config.py
apps/web/: .eslintrc.json  Dockerfile  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/prompts/: route.ts
apps/web/app/cases/[id]/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/inbox/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/monitoring/: page.tsx
apps/web/app/prompts/: page.tsx
apps/web/src/components/: AuditExportButton.tsx  AuditTimeline.tsx  ConfidenceBar.tsx  DeletePromptButton.tsx  NewPromptForm.tsx  PromoteButton.tsx  ReviewActions.tsx  RunEvalButton.tsx  SLABadge.tsx  StatusBadge.tsx  TopBar.tsx  UploadForm.tsx
apps/web/src/design-system/: tokens.ts
apps/web/src/lib/: api.ts  auth.ts  format.ts
eval/: __init__.py  gate.py  run.py  runner.py
eval/dataset/adversarial_formatting/: adversarial_001.json
eval/dataset/amount_over_threshold/: over_threshold_001.json
eval/dataset/category_requires_justification/: category_001.json
eval/dataset/clean_invoice/: nfe_001.json
eval/dataset/cost_center_invalid/: cc_invalid_001.json
eval/dataset/duplicate_invoice/: dup_001.json
eval/dataset/handwritten_receipt/: handwritten_001.json
eval/dataset/items_mismatch/: items_mismatch_001.json
eval/dataset/language_variation/: lang_001.json
eval/dataset/low_quality_scan/: low_qual_001.json
eval/dataset/supplier_unknown/: unknown_supplier_001.json
eval/dataset/urgent_payment/: urgent_001.json
eval/dataset/value_mismatch/: mismatch_001.json
eval/scorecards/: candidate_v2_bad.json  production.json
eval/tests/: test_eval_config_wiring.py  test_gate_compare.py
infra/: alerts.yml  docker-compose.dev.yml  prometheus.yml
infra/grafana/dashboards/: ledgercopilot.json
infra/grafana/provisioning/dashboards/: dashboard-provider.yml
infra/terraform/: README.md  apis.tf  artifact_registry.tf  cloud_run.tf  cloudsql.tf  iam.tf  network.tf  outputs.tf  redis.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
migrations/: env.py
migrations/versions/: 25cbf4e46839_add_dead_letters_table.py  446fc65a7cbb_initial_schema_phase_1.py  513840477ab6_add_human_reviews_table_phase_2.py  83ce92ede619_unique_name_and_soft_delete_prompt_.py  99d18739ec43_add_reconciliation_results_table.py  a1b2c3d4e5f6_add_policy_decisions_table.py  a7f3c1e9d204_prompt_version_generation_config.py  b2c3d4e5f6a7_add_prompt_completion_to_model_runs.py  b8e1d4072f5a_prompt_version_changelog.py  c4d5e6f7a8b9_add_injection_suspected_to_extractions.py  dc75a14b152f_add_business_key_to_cases.py  df37697dd16e_add_user_password_hash_phase_4.py  e7a1c2b3d4f5_add_reference_tables.py  eccc46831cff_add_model_runs_and_prompt_versions_.py  f3a4b5c6d7e8_add_ocr_fields_to_documents.py  f8b2c3d4e5a6_add_requires_dual_approval_to_policy.py
workers/: __init__.py  bucket_scan.py  hitl_activities.py  hitl_worker.py  pipeline.py  serve.py
(+2 files in other folders)
